<resources>
    <string name="app_name">Sender</string>
    <string name="main_welcome">Welcome to the Sender</string>
    <string name="main_settings">Settings</string>
    <string name="main_send_location">Send Location</string>
    <string name="main_send_message">Send Message</string>

    <string name="global_back">Back</string>
    <string name="global_add">+</string>
    <string name="global_cancel">Cancel</string>
    <string name="global_save">Save</string>

    <string name="title_activity_record">Record</string>

    <string name="settings_add_new_record">Add New Record</string>

    <string name="record_name">Name</string>
    <string name="record_email">e-mail</string>
    <string name="record_phone">phone</string>

    <string name="gps_text">Welcome to the GPS activity...</string>
    <string name="gps_no_location_detected">No Location Detected</string>
    <string name="gps_permission_rationale">Permission Rationale</string>
    <string name="gps_permission_denied">Permission Denied</string>
    <string name="gps_url_base">http://maps.google.com/?q=</string>
    <string name="gps_text_prefix">I am here </string>

    <string name="flow_what">What</string>
    <string name="flow_how">How</string>
    <string name="flow_to_whom">To Whom</string>
    <string name="flow_name">Flow Name</string>

    <string name="sender_widget_text">Flow</string>
    <string name="sender_widget_add">Add widget</string>

    <string-array name="WhatChoices">
        <item>Send Location</item>
        <item>Send Text Message</item>
    </string-array>

    <string-array name="HowChoices">
        <item>WhatsApp</item>
        <item>SMS</item>
    </string-array>

    <string-array name="ToWhomChoices">
        <item>Contact</item>
        <item>Others</item>
    </string-array>

</resources>
